# FlowForge

./: .env.example  .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  pyproject.toml
.claude/: settings.json
docs/: ISSUES.md
docs/plans/: 2026-03-09-mvp-design.md  2026-03-09-scaffold-plan.md  2026-03-10-n8n-integration-proposal.md
docs/superpowers/plans/: 2026-03-18-p0p1-issues-fix.md
docs/superpowers/specs/: 2026-03-18-p0p1-issues-design.md
examples/: 01_research_report.py  02_customer_support.py  03_content_pipeline.py  04_stock_analysis.py  05_tango_review.py  06_prompt_chaining.py  07_parallelization.py  08_orchestrator_workers.py  09_evaluator_optimizer.py  10_yoexecute_orchestrator.py
scripts/: eval.py
src/flowforge/: __init__.py  core.py  harness.py  identity.py
tests/: test_async.py  test_boundary_contracts.py  test_flowforge.py  test_smoke.py  test_sprint1.py  test_sprint3.py
