[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "flowforge"
version = "0.1.0"
description = "Unified agent orchestration — PocketFlow + LangGraph + CrewAI + Agno in ~1600 lines"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Aravind", email = "aravind@ohboyconsultancy.com" },
]
keywords = [
    "agents",
    "llm",
    "orchestration",
    "multi-agent",
    "langgraph",
    "crewai",
    "pocketflow",
    "pydantic",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2.0",
]

[project.optional-dependencies]
litellm = ["litellm>=1.0"]
anthropic = ["anthropic>=0.30"]
openai = ["openai>=1.0"]
all = [
    "litellm>=1.0",
    "anthropic>=0.30",
    "openai>=1.0",
]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.0",
    "ruff>=0.4",
    "mypy>=1.0",
]

[project.urls]
Homepage = "https://github.com/ohboyftw/FlowForge"
Documentation = "https://github.com/ohboyftw/FlowForge#readme"
Repository = "https://github.com/ohboyftw/FlowForge"
Issues = "https://github.com/ohboyftw/FlowForge/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/flowforge"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src", "tests", "examples"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]
ignore = ["E501"]  # line length handled by formatter

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.10"
strict = false
warn_return_any = true
warn_unused_configs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "litellm.*"
ignore_missing_imports = true
